--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,13 @@
     padding: 0;
     box-sizing: border-box;
  }
-
+  .container-main {
+    position: relative;
+    text-align: center;
+    
+    
+     
+  }
  
 
   .logo-siman{
