--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Slabo+27px&display=swap');
 :root{
 
    --color-blanco: white;
+   --color-secundary: #f40712;
 
-
-
+   --primary-font:  "Bebas Neue", sans-serif;
+   --secundary-font: "Slabo 27px", serif;
 }
 
 
@@ -14,12 +18,8 @@
 }
  .container-main {
    position: relative;
-   text-align: center;
-   
-   
-    
+   text-align: center;  
  }
-
  .menu{
    display: flex;
    justify-content: space-around;
@@ -27,9 +27,6 @@
    background-color: red;
    width: 100%;
    height: 3rem;
-   
-
-
    
  }
  .logo-siman{
@@ -39,6 +36,54 @@
    text-decoration: none;
    color: var(--color-blanco);
    
+ }
+ .promocion{
+    font-family: var(--primary-font);
+    text-align: center;
+    
+ }
+ .producto{
+   
+    height: 2rem;
+    text-align: center;
+    padding: 5px;
+    height: 50%; 
+  
+ }
+ .producto img{
+    height: 13rem;
+    text-align: center;
+  
+ }
+ .producto p{
+    object-fit: cover;
+    padding: 2rem;
+    height: 50%;
+    font-family: var(--secundary-font);
+   
+    
+ }
+ .container-product{
+    display: flex;
+    justify-content: center;
+ }
+ .card{
+    background-color: var(--color-secundary) ;
+    margin: 2rem;
+    border-radius: 15px;
+    padding: 1rem;
+    width: 300px;
+    box-shadow: 20px;
+    text-align: center;
+    text-transform: var(--secundary-font);
+
+ }
+
+ .card-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
  }
 
  
