--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@
    color: var(--color-blanco);
    
  }
- .promocion{
+ .decoracion-text{
     font-family: var(--primary-font);
     text-align: center;
     
