--- a/css/main.css
+++ b/css/main.css
@@ -91,4 +91,27 @@
  }
 
 
- 
+ .container-img{
+    width: 15rem;
+    height: 50%;
+    object-fit: cover;
+ }
+
+ .text-conta{
+    display: flex;
+    
+ }
+
+.container-descripcion{
+    display: flex;
+    width: 100%;
+    margin: 10vh;
+    
+}
+.container-descripcion h2{
+
+    margin: 50px;
+}
+.container-descripcion p{
+    margin: 50px;
+}
