--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,8 @@
     margin: 50px;
 }
 
-@media (min-width: 768px) and (max-width 1000px){
+
+@media (min-width: 768px) {
     .container-main{
         flex-basis: 48%;
        
